--- a/src/ru/spbau/mit/kravchenkoyura/GUI/View.form
+++ b/src/ru/spbau/mit/kravchenkoyura/GUI/View.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="main.proto.kravchenkoyura.View">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ru.spbau.mit.kravchenkoyura.GUI.View">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -181,7 +181,9 @@
                     <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <text value=""/>
+                </properties>
               </component>
             </children>
           </grid>
@@ -195,7 +197,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="b8109" class="javax.swing.JTextArea" binding="helloTextArea" default-binding="true">
+          <component id="6c02e" class="javax.swing.JTextPane" binding="helloTextPane" default-binding="true">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
